package login;

message LoginRequest {
  required uint64 account = 1;
  required string sessionkey = 2;
}

message LoginResponse {
  optional uint64 account = 1;
  optional uint64 userid = 2;
  optional string sessionkey = 3;
  optional string endpoint = 4;
}

